--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSzd_3_q16nUMTPQcGRT_7BJvUVOaDU7cRQGw&usqp=CAU"
     />
     <title>My Project</title>
-    <script defer="defer" src="/static/js/main.6d671500.js"></script>
-    <link href="/static/css/main.f6b9f7ab.css" rel="stylesheet" />
+    <script defer="defer" src="static/js/main.6d671500.js"></script>
+    <link href="static/css/main.f6b9f7ab.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
